2010-06-25  Simon Kallweit <simon.kallweit@intefo.ch>

	* include/*:
	* tests/*:
	* HISTORY:
	* LICENSE: Updated to uSTL 1.4 sources.

2009-10-06  Uwe Kindler <uwe_kindler@web.de>

	* doc/ustl.sgml: Removed cout.flush() from example and from note.
	Added note about use of compiler flag -Wno-undef.
	
2009-08-30  John Dallaway  <john@dallaway.org.uk>

	* include/*.h: Move all headers to include/ustl/ except ustl.h and
	stdint.h to avoid pollution of the root include directory in the
	eCos install tree.
	* include/ustl.h: Specify ustl/ directory when including header files.
	* cdl/ustl.h: Add include/ustl/ to the header file directory list
	using CYGPKG_USTL_CFLAGS_ADD.

2009-08-24  Uwe Kindler <uwe_kindler@web.de>

	* doc/ustl.sgml: Moved documentation from README file into
	ustl.sgml documentation file.
	* README: Remove.
	* cdl/ustl.cdl: Reference per-package documentation.
	* tests/stdtest.h: Removed unused code.

2009-08-21  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* src/bktrace.cpp: prevent inclusion of host header <execinfo.h>
	(eCos builds for Linux synthetic target).
	* src/uexception.cpp:exception::read(): initialise local
	variable stmSize.

2009-08-20  Uwe Kindler <uwe_kindler@web.de>

	* Initial contribution of uSTL library

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2009, 2010 Free Software Foundation, Inc.                        
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//